<resources>
    <string name="app_name">GameApp</string>
    <string name="but_check_number">Verifica!</string>
    <string name="txv_type_number_range_start">Rango Minimo</string>
    <string name="txv_type_number_range_end">Rango Maximo</string>
    <string name="txv_legend_1">Adivina un numero entre {0} y {1}</string>
    <string name="txv_legend_2">Tu numero es: {0}</string>
    <string name="txv_legend_3">Numero de intentos: {0}</string>
    <string name="txv_legend_4">Digita el rango en el cual deseas adivinar el numero</string>
    <string name="etx_legend_1">Digita tu numero aqui!</string>
    <string name="but_start_game">Iniciar Juego!</string>
    <string name="txv_app_main_menu_guess_game">Juego de Adivinanza!</string>
    <string name="txv_app_main_menu_guess_game_hint">Ingresa el rango para el juego</string>
    <string name="txv_app_main_menu_countries">Lista de Paises</string>
    <string name="txv_country_list_country_capitol">Capital</string>
    <string name="txv_country_list_country_int_name">Nombre Internacional</string>
    <string name="txv_country_list_country_short_code">Sigla</string>
</resources>
