<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CountryDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="2">

            <TextView
                android:id="@+id/txvCDACountryName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_columnSpan="2"
                android:textColor="@color/colorBlue"/>

            <ImageView
                android:id="@+id/imvCDACountryFlag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2"
                android:layout_rowSpan="2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlue"
                android:text="@string/txv_country_list_country_capitol"
                android:padding="10dp"
                android:labelFor="@+id/txvCDACapitol" />

            <TextView
                android:id="@+id/txvCDACapitol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txv_country_list_country_int_name"
                android:textColor="@color/colorBlue"
                android:padding="10dp"/>

            <TextView
                android:id="@+id/txvCDAIntCountryName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txv_country_list_country_short_code"
                android:textColor="@color/colorBlue"
                android:padding="10dp"/>

            <TextView
                android:id="@+id/txvCDAShortName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </GridLayout>



    </LinearLayout>

</android.support.constraint.ConstraintLayout>